--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Welcome to the Frontend of the Multi Tier Application</h1>
-  <h2>This is a part of the course end project on Docker </h2>
+  <h2>This is a part of the course end project on Containerization with Docker </h2>
   <p>API URL: <span id="api-url"></span></p>
   <script>
     document.getElementById('api-url').textContent = 'http://' + window.location.hostname + ':5000';
